chore(hello): update page

--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<!-- fix - исправление -->
+		<!-- feat - новая фича (функциональность) -->
+		<!-- init - иницифлизация -->
+		<!-- docs - редактирование документации-->
+		<!-- chore - во всех остальных случаях -->
+
+		<!-- (context) - контекст работы (опциональна)  -->
+		<!-- : what do - описания проделанной работы -->
+
+		<!-- Примеры -->
+		<!-- init (hw-4): create project -->
+		<!-- feat(hw-4): make task 1-2 -->
+		<!-- feat(hw-4): make task 2-4 -->
+		<!-- fix(hw-4): edit footer classes (task 3) -->
+	</body>
 </html>
